// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col space-y-5 rounded-lg border Alert__AlertWrapper-sc-1rcd7no-0 sDOxJ bg-theme-secondary-100 dark:bg-theme-secondary-800 border-theme-secondary-300 dark:border-theme-secondary-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex justify-center items-center text-theme-warning-600"
    >
      <div
        class="sc-bdfBwQ daKoZl"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="rounded-md border pointer-events-none border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render a large one 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-5 rounded-lg border Alert__AlertWrapper-sc-1rcd7no-0 grmxUp bg-theme-secondary-100 dark:bg-theme-secondary-800 border-theme-secondary-300 dark:border-theme-secondary-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex justify-center items-center text-theme-warning-600"
    >
      <div
        class="sc-bdfBwQ daKoZl"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="rounded-md border pointer-events-none border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</div>
`;

exports[`Alert should render a small one 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-5 rounded-lg border Alert__AlertWrapper-sc-1rcd7no-0 ifLGhi bg-theme-secondary-100 dark:bg-theme-secondary-800 border-theme-secondary-300 dark:border-theme-secondary-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
  >
    <div
      class="flex justify-center items-center text-theme-warning-600"
    >
      <div
        class="sc-bdfBwQ daKoZl"
        height="1.75em"
        width="1.75em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <span
      class="rounded-md border pointer-events-none border-theme-warning-600"
    />
    <div
      class="flex flex-col space-y-2"
    />
  </div>
</div>
`;
